--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -172,15 +172,16 @@
           class="overflow-visible mat-cell-actions"
           [ngClass]="actionsColStyles() || ''">
           @for (action of actions() | keyvalue | orderTableActionsElements; track action.key) {
-            @if (action.key === 'EDIT') {
+            @if (action.key === 'EDIT' && action.value?.visible(element)) {
               <button
                 type="button"
                 mat-icon-button
+                color="primary"
                 [routerLink]="action.value?.link ? action.value?.link(element) : [element.id]"
                 [attr.aria-label]="action.value?.description(element) || ''"
                 [matTooltip]="action.value?.description(element) || ''"
                 [disabled]="action.value?.disabled ? action.value?.disabled(element) : false">
-                <mat-icon class="mat-primary">edit</mat-icon>
+                <mat-icon>edit</mat-icon>
               </button>
             } @else if (action.value?.visible(element) && action.value?.type === 'input') {
               <button
@@ -190,32 +191,34 @@
                 [matTooltip]="action.value?.description(element) || ''"
                 [disabled]="action.value?.disabled ? action.value?.disabled(element) : false"
                 (click)="getChangedData.emit(action.value?.execute(element))">
-                <mat-icon class="mat-warn">delete</mat-icon>
+                <mat-icon>delete</mat-icon>
               </button>
             } @else if (action.key === 'DELETE' && action.value?.visible(element)) {
               <button
                 type="button"
                 mat-icon-button
+                color="warn"
                 [attr.aria-label]="action.value?.description(element) || ''"
                 [matTooltip]="action.value?.description(element) || ''"
                 [disabled]="action.value?.disabled ? action.value?.disabled(element) : false"
                 (click)="onDelete($event, element)">
-                <mat-icon class="mat-warn">delete</mat-icon>
+                <mat-icon>delete</mat-icon>
               </button>
             } @else if (action.value?.visible(element)) {
               <button
                 type="button"
                 mat-icon-button
+                color="accent"
                 [attr.aria-label]="action.value?.description(element) || ''"
                 [matTooltip]="action.value?.description(element) || ''"
                 [disabled]="action.value?.disabled ? action.value?.disabled(element) : false"
                 [routerLink]="action.value?.link ? action.value?.link(element) : null"
                 (click)="$event.stopPropagation(); action.value?.execute?.(element)">
-                <mat-icon class="mat-primary">{{ action.value?.icon(element) }}</mat-icon>
+                <mat-icon>{{ action.value?.icon(element) }}</mat-icon>
               </button>
-            } @else {
+            } @else if (!action.value?.visible(element)) {
               <!-- TODO: #447 find a better way to handle the height of the cell when it has no buttons --->
-              <button type="button" mat-icon-button class="invisible"></button>
+              <button type="button" mat-icon-button class="invisible">&nbsp;</button>
             }
           }
         </mat-cell>
