fix(llecoop/user-order/list): #458 disable edit and delete user order if order is closed
ISSUES CLOSED: #458

--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -1,6 +1,6 @@
 @let routingToDetailPage = facade.routingToDetailPage();
 @let viewConfig = facade.viewConfig();
-@let tableDefinition = facade.tableDefinition();
+@let tableDefinition = facade.tableDefinition;
 @let viewExtraActions = facade.viewExtraActions?.() || [];
 
 <div class="flex flex-row flex-wrap items-center justify-center gap-sm sm:justify-between">
