--- a/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
+++ b/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
@@ -1,5 +1,5 @@
 @let viewConfig = facade.viewConfig();
-@let tableDefinition = facade.tableDefinition();
+@let tableDefinition = facade.tableDefinition;
 
 <div
   class="flex flex-col flex-wrap items-center justify-center gap-sm md:flex-row md:justify-between">
