--- a/libs/shared/form/ui/table/src/lib/input-table-type.component.html
+++ b/libs/shared/form/ui/table/src/lib/input-table-type.component.html
@@ -1,4 +1,4 @@
-@let tableDefinition = props.tableDefinition();
+@let tableDefinition = props.tableDefinition;
 @let data = tableDefinition.getData?.() || [];
 
 <plastik-input-table
