--- a/libs/shared/form/feature/src/lib/shared-form-feature.component.html
+++ b/libs/shared/form/feature/src/lib/shared-form-feature.component.html
@@ -4,13 +4,12 @@
   [formGroup]="form"
   (ngSubmit)="onSubmit($event)">
   <!-- form -->
-
   <formly-form
     class="form-container"
     [form]="form"
     [options]="options"
     [fields]="fields()"
-    [model]="computedModel()"
+    [model]="model()"
     (modelChange)="onModelChange($event)"></formly-form>
 
   <!-- buttons -->
