refactor(llecoop/user-order/detail): #455 review user order detail form view styles
closes #455

--- a/libs/llecoop/order-list/feature/llecoop-order-indicator/src/lib/llecoop-order-indicator.component.html
+++ b/libs/llecoop/order-list/feature/llecoop-order-indicator/src/lib/llecoop-order-indicator.component.html
@@ -12,7 +12,10 @@
       <span class="hidden md:flex"> #{{ orderListStore.currentOrder()?.name }} </span>
       <span class="hidden md:flex">|</span>
       <span class="text-pretty">
-        {{ openedUserOrderList()?.totalPrice || 0 | currency: 'EUR' : 'symbol' : '2.2-2' }}
+        {{
+          (openedUserOrderList()?.totalPrice || 0) + (openedUserOrderList()?.deliveryPrice || 0)
+            | currency: 'EUR' : 'symbol' : '2.2-2'
+        }}
       </span>
 
       <mat-icon
