--- a/libs/shared/form/feature/src/lib/shared-form-feature.component.html
+++ b/libs/shared/form/feature/src/lib/shared-form-feature.component.html
@@ -18,7 +18,7 @@
       mat-flat-button
       color="primary"
       type="submit"
-      class="h-[56px] w-[150px]"
+      class="h-[56px] w-full sm:w-[150px]"
       data-test="submit-button"
       [ngClass]="submitConfig()?.buttonStyle || ''"
       [disabled]="!form.valid">
