--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -141,7 +141,7 @@
     <div class="flex items-center justify-center gap-sub">
       <svg-icon [src]="icon.iconPath" [svgClass]="icon.svgClass"></svg-icon>
 
-      <span class="block text-md sm:hidden">{{ headerTitle }}</span>
+      <span class="hidden">{{ headerTitle }}</span>
       <span class="hidden sm:block">{{ headerConfig.extendedTitle || headerTitle }}</span>
     </div>
   }
