--- a/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
+++ b/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
@@ -8,7 +8,7 @@
     <span>{{ viewConfig.title | titlecase }}</span>
   </h2>
 
-  <div class="flex flex-row items-center justify-end gap-sm">
+  <div class="flex flex-col items-center sm:flex-row sm:justify-end gap-sm">
     @if (viewExtraActions.length) {
       @for (action of viewExtraActions; track action) {
         @if (action.type === 'button') {
@@ -16,14 +16,16 @@
             type="button"
             mat-flat-button
             color="accent"
-            class="text-white"
+            class="w-full text-white sm:w-auto"
             [disabled]="action?.disabled()"
             (click)="action?.execute()">
             <mat-icon>{{ action.icon }}</mat-icon> {{ action.label }}
           </button>
         }
         @if (action.type === 'text') {
-          <div class="flex gap-sub" [ngClass]="action.styles">
+          <div
+            class="flex items-center justify-center w-full gap-tiny sm:w-auto"
+            [ngClass]="action.styles">
             <mat-icon>{{ action.icon }}</mat-icon>
             {{ action.text }}
           </div>
