--- a/libs/llecoop/order-list/feature/llecoop-order-indicator/src/lib/llecoop-order-indicator.component.html
+++ b/libs/llecoop/order-list/feature/llecoop-order-indicator/src/lib/llecoop-order-indicator.component.html
@@ -20,7 +20,7 @@
 
       <mat-icon
         matBadgeColor="warn"
-        aria-hidden="true"
+        aria-hidden="false"
         [matBadge]="openedUserOrderList()?.cart?.length || 0"
         >shopping_cart</mat-icon
       >
