--- a/libs/shared/form/ui/table/src/lib/input-table-type.component.html
+++ b/libs/shared/form/ui/table/src/lib/input-table-type.component.html
@@ -5,7 +5,7 @@
   [tableCaption]="tableDefinition.caption || ''"
   [tableColumnProperties]="tableDefinition.columnProperties || []"
   [tableActions]="tableDefinition.actions || {}"
-  [tableSorting]="tableDefinition?.sort()"
+  [tableSorting]="tableDefinition.sort?.()"
   [tableExtraRowStyles]="tableDefinition.extraRowStyles"
   [tableData]="data || []"
   [tableDataLength]="data.length"
