--- a/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
+++ b/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
@@ -1,5 +1,6 @@
 @let viewConfig = facade.viewConfig();
 @let viewExtraActions = facade.viewExtraActions?.() || [];
+@let formConfig = facade.formConfig;
 
 <div
   class="flex flex-col flex-wrap items-center justify-center gap-sm md:flex-row md:justify-between">
@@ -40,10 +41,10 @@
 
 <plastik-shared-form-feature
   class="block w-full"
-  [ngClass]="{ 'lg:w-10/12 xxl:w-1/2': !facade.formFullWidth?.() }"
-  [fields]="facade.formStructure || []"
+  [ngClass]="{ 'lg:w-10/12 xxl:w-1/2': !formConfig.getFormFullWidth }"
+  [fields]="formConfig.getConfig() || []"
   [model]="facade.model?.() || {}"
-  [submitConfig]="facade.formSubmitConfig?.()"
+  [submitConfig]="formConfig.getSubmitFormConfig?.(!!facade.model?.())"
   (temporaryChangeEvent)="onChange($event)"
   (changeEvent)="onSubmit($event)">
 </plastik-shared-form-feature>
