--- a/libs/shared/auth/feature/src/lib/auth-feature/auth-feature.component.html
+++ b/libs/shared/auth/feature/src/lib/auth-feature/auth-feature.component.html
@@ -1,51 +1,66 @@
 @if (notificationFacade.config$ | ngrxPush; as config) {
-  <div [plastikSnackbar]="config" (sendDismiss)="notificationFacade.dismiss()"></div>
+<div
+  [plastikSnackbar]="config"
+  (sendDismiss)="notificationFacade.dismiss()"
+></div>
 }
 
 <div class="flex flex-col">
   @if (isActive$ | ngrxPush) {
-    <plastik-shared-activity-ui-overlay class="z-10">
-      <!-- TODO: Create a shared activity indicator https://github.com/plastikaweb/plastikspace/issues/96 -->
-      <div class="spinner-container">
-        <div class="lds-ripple">
-          <div></div>
-          <div></div>
-        </div>
+  <plastik-shared-activity-ui-overlay class="z-10">
+    <!-- TODO: Create a shared activity indicator https://github.com/plastikaweb/plastikspace/issues/96 -->
+    <div class="spinner-container">
+      <div class="lds-ripple">
+        <div></div>
+        <div></div>
       </div>
-    </plastik-shared-activity-ui-overlay>
+    </div>
+  </plastik-shared-activity-ui-overlay>
   }
 
-  <div class="flex items-center justify-center min-h-screen contain-layout">
+  <div class="flex items-center justify-center min-h-screen contain-layout p-sub">
     <mat-card
       appearance="raised"
-      class="flex items-center justify-center max-w-full align-middle shadow-md min-w-third lg:max-w-third bg-gray-10">
+      class="flex items-center justify-center align-middle shadow-md bg-gray-10 min-w-[300px]"
+    >
       <mat-card-header>
         <mat-card-title class="flex justify-center align-middle gap-sub">
           @if (logo()) {
-            <img [src]="logo()" [alt]="title()" />
+          <img
+            [alt]="title()"
+            [src]="logo()"
+          />
           }
           @if (title()) {
-            <span>{{ title() }}</span>
+          <span>{{ title() }}</span>
           }
         </mat-card-title>
       </mat-card-header>
 
       <mat-card-content class="w-full my-sm">
+        @let formConfig = facade.formConfig;
+
         <plastik-shared-form-feature
-          [fields]="facade.formStructure?.() || []"
-          [submitConfig]="{ label: label(), buttonStyle: buttonStyle() }"
-          (changeEvent)="facade.onSubmit($event)">
+          [fields]="formConfig.getConfig() || []"
+          [submitConfig]="formConfig.getSubmitFormConfig?.()"
+          (changeEvent)="facade.onSubmit($event)"
+        >
           <div class="extraLinks">
             @for (link of facade.extraLinks?.(); track link) {
-              <a [routerLink]="link.route">{{ link.label }}</a>
+            <a [routerLink]="link.route">{{ link.label }}</a>
             }
           </div>
         </plastik-shared-form-feature>
       </mat-card-content>
 
       <mat-card-footer
-        class="w-full text-center text-white border-t-2 text-[12px] text-pretty bg-strippedPrimaryDark py-sub border-spacing-sm border-t-primary-light">
-        <a class="text-white" target="_self" [href]="nameLink()">{{ name() }}</a> ©
+        class="w-full text-center text-white border-t-2 text-[12px] text-pretty bg-strippedPrimaryDark py-sub border-spacing-sm border-t-primary-light"
+      >
+        <a
+          class="text-white"
+          target="_self"
+          [href]="nameLink()"
+        >{{ name() }}</a> ©
         {{ currentDate | date: 'yyyy' }}
       </mat-card-footer>
     </mat-card>
