--- a/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
+++ b/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
@@ -5,7 +5,7 @@
   class="flex flex-col flex-wrap items-center justify-center gap-sm md:flex-row md:justify-between">
   <h2 class="flex items-center content-center h4 gap-sub">
     <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ viewConfig.icon }}</mat-icon>
-    <span>{{ viewConfig.title | titlecase }}</span>
+    <div [innerHTML]="viewConfig.title"></div>
   </h2>
 
   <div class="flex flex-row items-center justify-end gap-sm">
