fix(shared/form/ui): #485 fix 'should create' spec for input-color-picker.component.spec.ts
ISSUES CLOSED: #485

--- a/libs/shared/form/ui/input-color-picker/src/lib/input-color-picker-type.component.html
+++ b/libs/shared/form/ui/input-color-picker/src/lib/input-color-picker-type.component.html
@@ -6,6 +6,7 @@
     [acceptLabel]="props.acceptLabel || 'Accept'"
     [cancelLabel]="props.cancelLabel || 'Cancel'"
     [formControl]="formControl"
+    [formlyAttributes]="field"
     [format]="'hex'"
     [hideColorPicker]="props.hideColorPicker || false"
     [hideTextInput]="props.hideTextInput || false"
