fix(shared/form/ui): #485 fix specs for input-password-with-visibility-type formly component

--- a/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility-type.component.html
+++ b/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility-type.component.html
@@ -3,6 +3,7 @@
   class="w-[90%]"
   [type]="hiddenPass() ? 'password' : 'text'"
   [formControl]="formControl"
+  [formlyAttributes]="field"
   [required]="props.required || false"
   [maxLength]="props.maxLength"
   [minLength]="props.minLength"
