refactor(llecoop/cms-layout): #487 add a custom layout config library
ISSUES CLOSED: #487

--- a/apps/llecoop/src/app/app.component.html
+++ b/apps/llecoop/src/app/app.component.html
@@ -1,1 +1,19 @@
+@if (isActive()) {
+  <plastik-shared-activity-ui-overlay>
+    <div class="spinner-container">
+      <div class="lds-ripple">
+        <div></div>
+        <div></div>
+      </div>
+      <p class="sr-only">carregant botiga...</p>
+    </div>
+  </plastik-shared-activity-ui-overlay>
+}
+
+@defer (when notificationConfig()) {
+  <div
+    [plastikSnackbar]="notificationConfig() || {}"
+    (sendDismiss)="notificationFacade.dismiss()"></div>
+}
+
 <router-outlet></router-outlet>
