--- a/apps/llecoop/src/styles/_loading.scss
+++ b/apps/llecoop/src/styles/_loading.scss
@@ -1,19 +1,28 @@
 .spinner-container {
-  @apply flex flex-col justify-center items-center absolute top-0 left-0 right-0 bottom-0 z-50 gap-md pointer-events-none;
-
-  .logo {
-    @apply my-0 mx-auto w-[100px] saturate-100 contrast-100 brightness-95;
-  }
+  @apply flex flex-col justify-center items-center absolute top-0 left-0 right-0 bottom-0 z-50 pointer-events-none bg-black/50;
 
   .lds-ripple {
-    @apply relative inline-block w-[80px] h-[80px] motion-reduce:before:content-['loading...'];
+    @apply relative inline-block w-xxl h-xxl motion-reduce:before:content-['loading...'];
+    will-change: transform, opacity;
 
     > div {
-      @apply absolute border-primary-dark border-4 opacity-100 rounded-full animate-fast-radar motion-reduce:animate-none motion-reduce:hidden;
-
+      @apply absolute border-white border-[1rem] opacity-100 rounded-full w-xxl h-xxl motion-reduce:animate-none motion-reduce:hidden;
+      animation: ripple 1.2s infinite;
       &:nth-child(2) {
-        animation-delay: -0.35s;
+        @apply border-white border-[1rem];
+        animation-delay: -0.6s;
       }
     }
+  }
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
   }
 }
