--- a/apps/llecoop/src/styles/_material.scss
+++ b/apps/llecoop/src/styles/_material.scss
@@ -9,7 +9,7 @@ $theme: mat.m2-define-light-theme(
   (
     color: (
       primary: mat.m2-define-palette(palette.$md-primary, 500, 100, 700),
-      accent: mat.m2-define-palette(palette.$md-accent, A200, A100, A400),
+      accent: mat.m2-define-palette(palette.$md-accent, 400, 200, 700),
       warn: mat.m2-define-palette(palette.$md-warn),
     ),
     typography:
