refactor(llecoop): #491 remove activiy actions from router store and add to signal stores
Closes #491

--- a/apps/llecoop/src/app/app.component.html
+++ b/apps/llecoop/src/app/app.component.html
@@ -5,15 +5,13 @@
         <div></div>
         <div></div>
       </div>
-      <p class="sr-only">carregant botiga...</p>
+      <p class="sr-only">carregant dades...</p>
     </div>
   </plastik-shared-activity-ui-overlay>
 }
 
-@defer (when notificationConfig()) {
-  <div
-    [plastikSnackbar]="notificationConfig() || {}"
-    (sendDismiss)="notificationFacade.dismiss()"></div>
+@defer (when !!notificationConfig()) {
+  <div [plastikSnackbar]="notificationConfig()" (sendDismiss)="notificationFacade.dismiss()"></div>
 }
 
 <router-outlet></router-outlet>
