fix(llecoop/user-order/detail): #492 fix missing properties in model form
ISSUES CLOSED: #492

--- a/libs/shared/form/feature/src/lib/addons-wrapper/formly-addons-wrapper.component.html
+++ b/libs/shared/form/feature/src/lib/addons-wrapper/formly-addons-wrapper.component.html
@@ -7,8 +7,7 @@
       [attr.aria-label]="props['addonLeft']['aria'] || ''"
       [ngClass]="props['addonLeft'].classes"
       [ngStyle]="{ cursor: props['addonLeft'].onClick ? 'pointer' : 'inherit' }"
-      (click)="addonLeftClick()"
-    >
+      (click)="addonLeftClick()">
       @if (props['addonLeft'].icon) {
         <mat-icon>{{ props['addonLeft'].icon }}</mat-icon>
       }
@@ -27,11 +26,9 @@
       class="flex flex-row"
       [attr.aria-label]="props['addonRight']['aria'] || ''"
       [attr.tabindex]="!props['addonRight']['onClick'] ? '-1' : '0'"
-      [attr.aria-hidden]="!props['addonRight']['onClick']"
       [ngClass]="props['addonRight'].classes"
       [ngStyle]="{ cursor: props['addonRight'].onClick ? 'pointer' : 'inherit' }"
-      (click)="addonRightClick()"
-    >
+      (click)="addonRightClick()">
       @if (props['addonRight'].icon) {
         <mat-icon>{{ props['addonRight'].icon }}</mat-icon>
       }
