--- a/libs/shared/form/feature/src/lib/shared-form-feature.component.html
+++ b/libs/shared/form/feature/src/lib/shared-form-feature.component.html
@@ -9,7 +9,7 @@
     [form]="form"
     [options]="options"
     [fields]="fields()"
-    [model]="computedModel()"
+    [model]="model()"
     (modelChange)="onModelChange($event)"></formly-form>
 
   <!-- buttons -->
