--- a/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
+++ b/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
@@ -3,15 +3,15 @@
 @let formConfig = facade.formConfig;
 
 <div
-  class="flex flex-col flex-wrap items-center justify-center gap-sm md:flex-row md:justify-between">
-  <h2 class="flex items-center content-center h4 gap-sub">
+  class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
+  <h2 class="flex content-center items-center h4 gap-sub">
     <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ viewConfig.icon }}</mat-icon>
     <span>{{ viewConfig.title | titlecase }}</span>
   </h2>
 
   <div class="flex flex-col items-center sm:flex-row sm:justify-end gap-sm">
     @if (viewExtraActions.length) {
-      @for (action of viewExtraActions; track action) {
+      @for (action of viewExtraActions; track action.id) {
         @if (action.type === 'button') {
           <button
             type="button"
@@ -25,7 +25,7 @@
         }
         @if (action.type === 'text') {
           <div
-            class="flex items-center justify-center w-full gap-tiny sm:w-auto"
+            class="flex justify-center items-center w-full gap-tiny sm:w-auto"
             [ngClass]="action.styles">
             <mat-icon>{{ action.icon }}</mat-icon>
             {{ action.text }}
