--- a/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility-type.component.html
+++ b/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility-type.component.html
@@ -13,7 +13,7 @@
   tabindex="-1"
   type="button"
   matSuffix
-  class="absolute top-0 right-0"
+  class="absolute right-0 bottom-tiny"
   [attr.aria-label]="!hiddenPass() ? 'Hide password' : 'Show password'"
   [attr.aria-pressed]="hiddenPass()"
   (click)="hidePassword($event)">
