--- a/libs/nasa-images/search/ui/no-results/src/lib/nasa-images-search-ui-no-results/nasa-images-search-ui-no-results.component.html
+++ b/libs/nasa-images/search/ui/no-results/src/lib/nasa-images-search-ui-no-results/nasa-images-search-ui-no-results.component.html
@@ -1,6 +1,6 @@
-<div class="w-5/6 mx-auto mt-0 text-center mb-sm md:my-xl">
+<div class="mx-auto mt-0 w-5/6 text-center mb-sm md:my-xl">
   <h3 class="flex flex-col items-center">
-    <mat-icon aria-hidden="true" class="text-[15rem] text-secondary-dark h-[15rem] w-[15rem]">
+    <mat-icon aria-hidden="true" class="text-[15rem] text-secondary-dark size-[15rem]">
       <ng-content select="[icon]"></ng-content>
     </mat-icon>
     <ng-content select="[title]"></ng-content>
