--- a/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
+++ b/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
@@ -5,7 +5,7 @@
 <div
   class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
   <h2 class="flex content-center items-center h4 gap-sub">
-    <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ viewConfig.icon }}</mat-icon>
+    <mat-icon class="text-[40px] size-[40px]">{{ viewConfig.icon }}</mat-icon>
     <span>{{ viewConfig.title | titlecase }}</span>
   </h2>
 
@@ -44,7 +44,8 @@
   [ngClass]="{ 'lg:w-10/12 xxl:w-1/2': !formConfig.getFormFullWidth }"
   [fields]="formConfig.getConfig() || []"
   [model]="facade.model?.() || {}"
-  [submitConfig]="formConfig.getSubmitFormConfig?.(!!facade.model?.())"
+  [submitConfig]="formConfig.getSubmitFormConfig?.(!!facade.model?.()) || {}"
   (temporaryChangeEvent)="onChange($event)"
+  (pendingChangesEvent)="pendingChanges.set($event)"
   (changeEvent)="onSubmit($event)">
 </plastik-shared-form-feature>
