--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -5,7 +5,7 @@
 
 <div class="flex flex-row flex-wrap items-center justify-center gap-sm sm:justify-between">
   <h2 class="flex items-center content-center text-center h4 md:gap-sub">
-    <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ viewConfig?.icon }}</mat-icon>
+    <mat-icon class="text-[40px] size-[40px]">{{ viewConfig?.icon }}</mat-icon>
     {{ viewConfig?.title | titlecase }}
   </h2>
 
