--- a/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
+++ b/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
@@ -2,13 +2,13 @@
 @let tableDefinition = facade.tableDefinition;
 
 <div
-  class="flex flex-col flex-wrap items-center justify-center gap-sm md:flex-row md:justify-between">
-  <h2 class="flex items-center content-center h4 gap-sub">
-    <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ viewConfig.icon }}</mat-icon>
+  class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
+  <h2 class="flex content-center items-center h4 gap-sub">
+    <mat-icon class="text-[40px] size-[40px]">{{ viewConfig.icon }}</mat-icon>
     <div [innerHTML]="viewConfig.title"></div>
   </h2>
 
-  <div class="flex flex-row items-center justify-end gap-sm">
+  <div class="flex flex-row justify-end items-center gap-sm">
     <button
       type="button"
       mat-flat-button
@@ -21,7 +21,7 @@
 </div>
 
 <plastik-shared-form-feature
-  class="flex flex-row items-end content-center justify-between filters-box"
+  class="flex flex-row justify-between content-center items-end filters-box"
   [fields]="facade.tableSearchFormStructure() || []"
   [model]="{ text: '' }"
   [submitAvailable]="false"
@@ -53,10 +53,11 @@
     @let submitConfig = facade.orderDetailFormStructure.getSubmitFormConfig?.(!!element) || {};
 
     <plastik-shared-form-feature
-      class="flex flex-row items-end content-center justify-between filters-box"
+      class="flex flex-row justify-between content-center items-end filters-box"
       [fields]="fields"
       [model]="element"
       [submitConfig]="submitConfig"
+      (pendingChangesEvent)="pendingChanges.set($event)"
       (changeEvent)="onSaveUserOrder($event)">
     </plastik-shared-form-feature>
   }
