chore: #476 upgrade to NX 20.2 \& ng 19
ISSUES CLOSED: #476

--- a/apps/llecoop/src/styles/_theme.scss
+++ b/apps/llecoop/src/styles/_theme.scss
@@ -1,6 +1,6 @@
 @use '@angular/material' as mat;
 @use 'palette' as palette;
-@import 'font-family';
+@use 'font-family';
 
 @layer base {
   :root {
