--- a/apps/nasa-images/src/styles/_material.scss
+++ b/apps/nasa-images/src/styles/_material.scss
@@ -3,7 +3,8 @@
 @use 'palette';
 @use 'theme';
 
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 $theme: mat.m2-define-light-theme(
   (
