--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -66,7 +66,7 @@
     }
 
     <mat-nav-list menu-items data-test="sidenav-list">
-      @for (item of sidenavConfig; track item.id) {
+      @for (item of sidenavConfig(); track item.id) {
         <mat-list-item
           class="my-tiny h-xll hover:bg-gray-10 focus:bg-gray-10"
           routerLinkActive="bg-gray-10"
